
syntax = "proto3";
package cache;

import "google/protobuf/struct.proto";

service Cache {
    rpc Get (CacheGetRequest) returns (CacheGetResponse);
    rpc Set (CacheSetRequest) returns (CacheSetResponse);
}

message CacheGetRequest {
    string key = 1;
}

message CacheGetResponse {
    google.protobuf.Value value = 2;
}

message CacheSetRequest {
    string key = 1;
    string value = 2;
}

message CacheSetResponse {
    bool success = 1;
}